Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'City': 'Buenos Aires',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 2891000,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Toronto',\n",
+       "  'Country': 'Canada',\n",
+       "  'Population': 2800000,\n",
+       "  'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
+       "  'Country': 'South Korea',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
+       "  'Country': 'New Mexico',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Los Cabos',\n",
+       "  'Country': 'Mexico',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Archipelago Sea',\n",
+       "  'Country': 'Finland',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Walla Walla Valley',\n",
+       "  'Country': 'USA',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Iguazu Falls',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 0,\n",
+       "  'Area': 672}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities"
    ]
@@ -123,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]"
+    "x_values = ['Buenos Aires', 'Toronto', 'PyeongChang']"
    ]
   },
   {
@@ -139,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]"
+    "y_values = [2891000, 2800000, 2581000]"
    ]
   },
   {
@@ -151,12 +197,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Baddies",
+          "Migos",
+          "Jesus Christ"
+         ],
+         "type": "bar",
+         "uid": "cd5e7c7c-9933-11e9-bf78-6d4d03de14e6",
+         "x": [
+          "marlboro",
+          "riverdale",
+          "silver city"
+         ],
+         "y": [
+          289000,
+          2800000,
+          581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"265e7ec3-8fe3-45b3-9522-3c00c0a9f3fa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"265e7ec3-8fe3-45b3-9522-3c00c0a9f3fa\", [{\"text\": [\"Baddies\", \"Migos\", \"Jesus Christ\"], \"x\": [\"marlboro\", \"riverdale\", \"silver city\"], \"y\": [289000, 2800000, 581000], \"type\": \"bar\", \"uid\": \"cd78c410-9933-11e9-bf78-6d4d03de14e6\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"265e7ec3-8fe3-45b3-9522-3c00c0a9f3fa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"265e7ec3-8fe3-45b3-9522-3c00c0a9f3fa\", [{\"text\": [\"Baddies\", \"Migos\", \"Jesus Christ\"], \"x\": [\"marlboro\", \"riverdale\", \"silver city\"], \"y\": [289000, 2800000, 581000], \"type\": \"bar\", \"uid\": \"cd78c410-9933-11e9-bf78-6d4d03de14e6\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
     "\n",
+    "import pandas\n",
+    "file_name = './cities.xlsx'\n",
+    "travel_df = pandas.read_excel(file_name)\n",
+    "cities = travel_df.to_dict('records')\n",
+    "cities\n",
+    "\n",
+    "\n",
+    "import plotly\n",
+    "\n",
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "x_values = ['marlboro', 'riverdale', 'silver city']\n",
+    "y_values = [289000, 2800000, 581000]\n",
+    "\n",
+    "trace_first_three_pops = {\"type\": \"bar\", 'x': x_values, 'y': y_values, \"text\":[\"Baddies\",\"Migos\",\"Jesus Christ\"]}\n",
     "\n",
     "plotly.offline.iplot([trace_first_three_pops])"
    ]
@@ -290,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
